--- a/style.css
+++ b/style.css
@@ -1,24 +1,43 @@
 body {
-    background-color: #2C3E50;
-    color: #ECF0F1;
+    background-color:#DBECEE;
+    color: black;
+}
+#hero_section_image{
+    width: 100%;
+    height: 500px;
+    border-top-left-radius: 30px !important;
 }
 .navbar {
-    background-color: #34495E !important;
+    color: black !important;
+    background-color:#DBECEE !important;
 }
-.navbar-brand, .nav-link, .btn-outline-secondary {
-    color: #ECF0F1 !important;
+.nav-link, .btn-outline-secondary {
+    color: black !important;
+    font-size: large;
+    font-weight: 500;
+}
+.navbar-brand{
+    font-size: x-large;
+    font-weight: bold;
 }
 .btn-outline-primary {
-    border-color: #E74C3C;
-    color: #E74C3C;
+    border-color: #422BF3;
+    color: #422BF3;
+}
+.btn-secondary{
+    background-color: black;
+    color:white;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 2px;
+    padding-bottom: 5px;
 }
 .hero-section {
     position: relative;
-    background: url('images/background.jpg') no-repeat center center/cover;
     height: 100vh;
-    display: flex;
     align-items: center;
-    color: white;
+    color: black;
+    width: 100%;
 }
 .hero-overlay {
     position: absolute;
@@ -26,14 +45,10 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(44, 62, 80, 0.7);
 }
 .hero-content {
-    position: relative;
-    z-index: 2;
-    width: 50%;
     padding-left: 5%;
-    text-align: left;
+    font-size: xx-large;
 }
 .services-section {
     padding: 60px 0;
@@ -54,8 +69,20 @@ body {
     object-fit: cover;
 }
 .btn-primary {
-    background-color: #E74C3C;
+    background-color: #422BF3;
     border: none;
+    padding: 10px 25px;
+}
+.intro-text{
+    font-size: 16px;
+    font-weight: 300;
+    text-align: justify;
+    padding-right: 10px;
+}
+.btn-learn-more{
+    color: black;
+    padding: 10px 25px;
+    border: 2px solid black;
 }
 .portfolio-section, .team-section {
     padding: 60px 0;
